# azure-sdk-for-rust

./: !!monorepos.md  CONTRIBUTING.md  Cargo.toml
.cargo/: config.toml
eng/pipelines/templates/stages/: archetype-rust-release.yml
eng/scripts/: Pack-Crates.ps1
eng/xtask/: Cargo.toml
eng/xtask/src/: main.rs
