[workspace]
resolver = "2"
members = [
    "eng/xtask",
    "sdk/typespec",
    "sdk/typespec/typespec_client_core",
    "sdk/typespec/typespec_derive",
    "sdk/core/azure_core",
    "sdk/core/azure_core_amqp",
    "sdk/cosmos/azure_data_cosmos",
    "sdk/identity/azure_identity",
    "sdk/eventhubs/azure_messaging_eventhubs",
    "eng/test/mock_transport",
    "sdk/storage",
    "sdk/storage/azure_storage_blob",
]

[workspace.package]
authors = ["Microsoft"]
edition = "2021"
license = "MIT"
repository = "https://github.com/azure/azure-sdk-for-rust"
rust-version = "1.76"

[workspace.dependencies]
async-lock = "3.0"
async-process = "2.0"
async-trait = "0.1"
base64 = "0.22"
bytes = "1.0"
cargo_metadata = "0.18.1"
dyn-clone = "1.0"
futures = "0.3"
log = "0.4"
once_cell = "1.18"
paste = "1.0"
pin-project = "1.0"
proc-macro2 = "1.0.86"
rand = "0.8"
rustc_version = "0.4"
serde_json = "1.0"
serde_test = "1"
serial_test = "3.0"
quote = "1.0.36"
thiserror = "1.0"
tracing = "0.1.40"
tracing-subscriber = "0.3"
url = "2.2"

[workspace.dependencies.typespec]
path = "sdk/typespec"
default-features = false
version = "0.1.1"

[workspace.dependencies.typespec_client_core]
path = "sdk/typespec/typespec_client_core"
default-features = false
version = "0.1.1"

[workspace.dependencies.typespec_derive]
path = "sdk/typespec/typespec_derive"
version = "0.1.0"

[workspace.dependencies.azure_core]
path = "sdk/core/azure_core"
version = "0.19.0"

[workspace.dependencies.azure_core_amqp]
path = "sdk/core/azure_core_amqp"
version = "0.19.0"

[workspace.dependencies.azure_identity]
path = "sdk/identity/azure_identity"
version = "0.19.0"

[workspace.dependencies.azure_storage_common]
version = "0.1.0"
path = "sdk/storage"

[workspace.dependencies.async-std]
version = "1.12"
features = ["attributes"]

[workspace.dependencies.async-stream]
version = "0.3.5"

[workspace.dependencies.clap]
version = "4.4.16"
features = ["derive"]

[workspace.dependencies.fe2o3-amqp]
version = "0.12"
features = [
    "native-tls",
    "tracing",
    "uuid",
]

[workspace.dependencies.fe2o3-amqp-ext]
version = "0.12"
features = []

[workspace.dependencies.fe2o3-amqp-management]
version = "0.12"

[workspace.dependencies.fe2o3-amqp-cbs]
version = "0.12"

[workspace.dependencies.fe2o3-amqp-types]
version = "0.12"

[workspace.dependencies.getrandom]
version = "0.2"
features = ["js"]

[workspace.dependencies.hmac]
version = "0.12"

[workspace.dependencies.http-types]
version = "2.12"
default-features = false

[workspace.dependencies.oauth2]
version = "4.0.0"
default-features = false

[workspace.dependencies.openssl]
version = "0.10.46"

[workspace.dependencies.quick-xml]
version = "0.31"
features = [
    "serialize",
    "serde-types",
]

[workspace.dependencies.reqwest]
version = "0.12"
features = [
    "json",
    "stream",
]
default-features = false

[workspace.dependencies.serde]
version = "1.0"
features = ["derive"]

[workspace.dependencies.serde_amqp]
version = "0.12"
features = ["uuid"]

[workspace.dependencies.serde_bytes]
version = "0.11"

[workspace.dependencies.sha2]
version = "0.10"

[workspace.dependencies.syn]
version = "2.0.74"
features = ["full"]

[workspace.dependencies.time]
version = "0.3.10"
features = [
    "serde-well-known",
    "macros",
    "wasm-bindgen",
]

[workspace.dependencies.tokio]
version = "1.0"
default-features = false
features = [
    "macros",
    "time",
]

[workspace.dependencies.tz-rs]
version = "0.6"

[workspace.dependencies.uuid]
version = "1.0"
features = ["v4"]

[workspace.lints.clippy]
large_futures = "deny"
