[package]
name = "xtask"
version = "0.1.0"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
man = "0.3.0"
serde.workspace = true
serde_json.workspace = true
toml = { version = "0.8.19", features = ["preserve_order"] }

[lints]
workspace = true
